--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,12 @@
-# Mac OS X Finder and whatnot
-.DS_Store
-
-# Sparkle distribution Private Key (Don't check me in!)
-dsa_priv.pem
-
-# XCode (and ancestors) per-user config (very noisy, and not relevant)
-*.mode1
-*.mode1v3
-*.mode2v3
-*.perspective
-*.perspectivev3
+# xcode noise
+build/*
 *.pbxuser
+*.mode1v3
+*.perspectivev3
 
-# Generated files
-VersionX-revision.h
-
-# build products
-build/
-*.[oa]
-
-# Other source repository archive directories (protects when importing)
-.hg
+# old skool
 .svn
-CVS
 
-# automatic backup files
-*~.nib
-*.swp
-*~
-*(Autosaved).rtfd/
-Backup[ ]of[ ]*.pages/
-Backup[ ]of[ ]*.key/
-Backup[ ]of[ ]*.numbers/
+# osx noise
+.DS_Store
+profile
