--- a/SyntaxDefinitions.plist
+++ b/SyntaxDefinitions.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <array>
 	<dict>
@@ -43,7 +43,7 @@
 		<string>run mod dat</string>
 	</dict>
 	<dict>
- 		<key>name</key>
+		<key>name</key>
 		<string>Apache</string>
 		<key>file</key>
 		<string>apache</string>
@@ -203,13 +203,13 @@
 		<string>e</string>
 	</dict>
 	<dict>
-        <key>name</key>
-        <string>Erlang</string>
-        <key>file</key>
-        <string>erl</string>
-        <key>extensions</key>
-        <string>erl hrl</string>
-    </dict>
+		<key>name</key>
+		<string>Erlang</string>
+		<key>file</key>
+		<string>erl</string>
+		<key>extensions</key>
+		<string>erl hrl</string>
+	</dict>
 	<dict>
 		<key>name</key>
 		<string>eZ Publish</string>
@@ -241,7 +241,7 @@
 		<string>gedcom</string>
 		<key>extensions</key>
 		<string>ged</string>
-	</dict>	
+	</dict>
 	<dict>
 		<key>name</key>
 		<string>GNU Assembler</string>
@@ -530,7 +530,7 @@
 		<key>extensions</key>
 		<string>rb</string>
 	</dict>
-	 	<dict>
+	<dict>
 		<key>name</key>
 		<string>Scala</string>
 		<key>file</key>
@@ -649,6 +649,14 @@
 		<string>graphviz</string>
 		<key>extensions</key>
 		<string>gv dot</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>F-Script</string>
+		<key>file</key>
+		<string>f-script</string>
+		<key>extensions</key>
+		<string>fs</string>
 	</dict>
 </array>
 </plist>
