--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
-# xcode noise
+# Xcode
 build/*
 *.pbxuser
+!default.pbxuser
 *.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
 *.perspectivev3
-
-#xcode 4 user data
-*.xcodeproj/xcuserdata
-
-# old skool
-.svn
-
-# osx noise
-.DS_Store
+!default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
+xcuserdata/
 profile
+*.moved-aside
 
+## Ignore incredibly annoying .DS_Store files
+.DS_Store
